syntax = "proto3";

package content;

import "common.proto";

service ContentService {
    rpc create (CreateContentRequest) returns (CreateContentResponse);
}

message CreateContentRequest {
    common.DataSourceEnumDTO source = 1;
    ContentBodyDTO contentBody = 2;
    string entityName = 3;
    common.ContextDTO context = 4;
}

message CreateContentResponse {
    
}

message ContentBodyDTO {
    oneof data {
        common.ItemDTO Item = 1;
        common.PastExperienceDTO PastExperience = 2;
        common.CharacterMemoryDTO CharacterMemory = 3;
        common.MemoryDTO Memory = 4;
        common.MemoryPoolDTO MemoryPool = 5;
        common.MemoryPoolEntryDTO MemoryPoolEntry = 6;
        common.SkillDTO Skill = 7;
        common.SkillSetDTO SkillSet = 8;
        common.EquipmentSlotDTO EquipmentSlot = 9;
        common.StorageSlotDTO StorageSlot = 10;
        common.TraitDTO Trait = 11;
        common.AddictionDTO Addiction = 12;
        common.BackgroundDTO Background = 13;
        common.BirthsignDTO Birthsign = 14;
        common.CharacterDTO Character = 15;
        common.CharacterGenInstructionDTO CharacterGenInstruction = 16;
        common.CharacterGroupGenInstructionDTO CharacterGroupGenInstruction = 17;
        common.CharacterProfessionDTO CharacterProfession = 18;
        common.DiseaseDTO Disease = 19;
        common.EffectDTO Effect = 20;
        common.FactDTO Fact = 21;
        common.FactionDTO Faction = 22;
        common.ItemSetDTO ItemSet = 23;
        common.MoodDTO Mood = 24;
        common.NeedDTO Need = 25;
        common.PersonalityProfileDTO PersonalityProfile = 26;
        common.RaceDTO Race = 27;
        common.ReligionDTO Religion = 28;
        common.ResistanceDTO Resistance = 29;
        common.StatusDTO Status = 30;
        common.TagDTO Tag = 31;
    }
}
